testsuite/tests/typecheck/should_fail/ExplicitSpecificity5.stderr

ExplicitSpecificity5.hs:7:1: error:
    An instance head cannot contain inferred type variables
